--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   
   <div id="video">
     <video id="mainVideo" preload="auto">
-      <source src="musics.mp4" type="video/mp4">
+      <source src="Musics.mp4" type="video/mp4">
       
     </video>
   </div>
